--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "c4pone/pagespeed-parser",
     "description": "php module to parse pagespeed insights api results",
     "keywords": [
-        "api","google","PageSpeedInsights",'parser'
+        "api","google","PageSpeedInsights","parser"
     ],
     "homepage": "https://github.com/c4pone/pagespeed-parser",
     "license": "MIT",
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php" : ">=5.3.0",
+        "php" : ">=5.3.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
